# eni_dcim

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
analysis/: 2026-07-19-enable-gates-f2.md  2026-07-19-true-vertical-audit.md  2026-07-20-a8-contact-instant.md  2026-07-20-a8-half-extent.md  2026-07-20-block-b-power.md  2026-07-20-d7-banked-bearing.md  2026-07-20-nr4-corridor-clearance.md  2026-07-20-phantom-crossing.md  2026-07-20-phase6l-endpoints.md  2026-07-20-r5-sigma-phase6k.md  2026-07-20-vision-loss-windows.md  20260714-cross-checks.md  20260714-detector-eval-at-scale.md  20260714-flight-events.md  20260714-flight-kinematics.md  20260714-interesting-slices.md  README.md  _d7_inventory_out.json  _inventory_d7.py  detector_eval_metrics.json  eval_detector_scale.py  extract_slices.py  flight_events.json  flight_kinematics_metrics.json  hard_frames_index.json  make_interesting_slices.py  make_kinematics_report.py  mine_flight_events.py  mine_hard_frames.py  remine_hard_frames.py  report_flight_kinematics.py
config/: params_default.json  sim.json
docs/: 00-skira-klalit.md  01-architektura.md  02-bakara-veshichzur-matzav.md  03-reiya.md  04-lulaat-lemida.md  05-avney-derech.md  06-bdikot-veshichzur.md  07-mahapach-hachushim.md  08-sikum-r2-recon.md
scripts/: cert_suite.py  collect_artifacts.py  control_probe.py  fly_once.py  frame_probe.py  mavlink_census.py  phase1_check.py  plot_flight.py  reflight.py  run_campaign.py  slice_recording.py  telemetry_probe.py  topology_probe.py  vision_probe.py
simtools/: mock_sim.py  record.py  (+1 more)
(+2718 files in other folders)
